# potroshim-7kaa

./: .gitignore  CMakeLists.txt  README.md
01_SDL_hello/: CMakeLists.txt  main.c
02_Main_cursor/: ALL.h  AM.cpp  CMakeLists.txt  OGAME.h  OGAMMAIN.cpp  OMOUSE.cpp  OMOUSE.h  OMOUSECR.cpp  OMOUSECR.h  OSYS.cpp  OSYS.h  OVGA.cpp  OVGA.h  OVGABUF.cpp  OVGABUF.h  OVGABUF2.cpp
03_Map_terrain/: CMakeLists.txt  location.h  main.cpp  screen.cpp  world.cpp  world.h
04_Map_generate/: CMakeLists.txt  height_map.cpp  height_map.h  main.cpp  rand.cpp  rand.h  screen.cpp  screen.h  world.cpp  world.h
